force-app/main/default/objects/Quarterly_Update__c/Quarterly_Update__c.object-meta.xml
<CustomObject>
    <label>Quarterly Update</label>
    <nameField>
        <label>Quarterly Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>