force-app/main/default/objects/Quarterly_Update__c/fields/Call_Discussion_Points__c.field-meta.xml
<CustomField>
    <fullName>Call_Discussion_Points__c</fullName>
    <inlineHelpText>This field will capture the key discussion points/suggestions for the call - from both CM and CC</inlineHelpText>
    <label>Call Discussion Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>