force-app/main/default/objects/Quarterly_Update__c/fields/Call_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Call_Follow_Up__c</fullName>
    <description>This field captures the action items/follow up tasks that resulted from the call.</description>
    <inlineHelpText>This field captures the action items/follow up tasks that resulted from the call.</inlineHelpText>
    <label>Call Follow Up</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>