force-app/main/default/objects/Quarterly_Update__c/fields/Campus_events_integration__c.field-meta.xml
<CustomField>
    <fullName>Campus_events_integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campus Events Integration</label>
    <type>Checkbox</type>
</CustomField>