force-app/main/default/objects/Quarterly_Update__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quarterly Updates</relationshipLabel>
    <relationshipName>Quarterly_Updates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>