force-app/main/default/objects/Quarterly_Update__c/fields/Core_promotional_initiatives__c.field-meta.xml
<CustomField>
    <fullName>Core_promotional_initiatives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Promotional Initiatives</label>
    <type>Checkbox</type>
</CustomField>