force-app/main/default/objects/Quarterly_Update__c/fields/Integration_into_the_curriculum__c.field-meta.xml
<CustomField>
    <fullName>Integration_into_the_curriculum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration into the Curriculum</label>
    <type>Checkbox</type>
</CustomField>