force-app/main/default/objects/Quarterly_Update__c/fields/Key_Information__c.field-meta.xml
<CustomField>
    <fullName>Key_Information__c</fullName>
    <inlineHelpText>This field is used to capture important information from the call that has potential impact on the relationship.</inlineHelpText>
    <label>Key Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>