force-app/main/default/objects/Quarterly_Update__c/fields/MM101_requirement_recommendation__c.field-meta.xml
<CustomField>
    <fullName>MM101_requirement_recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Courses Requirement/Recommendation</label>
    <type>Checkbox</type>
</CustomField>