force-app/main/default/objects/Quarterly_Update__c/fields/Ongoing_communication_plan__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_communication_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing Communication Plan</label>
    <type>Checkbox</type>
</CustomField>