force-app/main/default/objects/Quarterly_Update__c/fields/Quarterly_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Check_in_Date__c</fullName>
    <label>Quarterly Check-in Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>