force-app/main/default/objects/Quarterly_Update__c/fields/SALT_ambassador_program__c.field-meta.xml
<CustomField>
    <fullName>SALT_ambassador_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Ambassador Program</label>
    <type>Checkbox</type>
</CustomField>