force-app/main/default/objects/Quarterly_Update__c/fields/SALT_incentive_programming__c.field-meta.xml
<CustomField>
    <fullName>SALT_incentive_programming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Incentive Programming</label>
    <type>Checkbox</type>
</CustomField>