force-app/main/default/objects/Quarterly_Update__c/fields/SALT_Program_Management__c.field-meta.xml
<CustomField>
    <fullName>SALT_Program_Management__c</fullName>
    <label>SALT Program Management</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>