force-app/main/default/objects/Quarterly_Update__c/fields/SALT_registration_req_recommendation__c.field-meta.xml
<CustomField>
    <fullName>SALT_registration_req_recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Registration Req/Recommendation</label>
    <type>Checkbox</type>
</CustomField>